codepkg/objects/Shipment__c.object
<CustomObject>
    <fields>
        <fullName>Carton_Number__c</fullName>
        <description>To Store Carton Number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Carton_Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Creator Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimensions_Unit_Of_Measure__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dimensions Unit Of Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Delivery_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>External Delivery Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freight_Charge__c</fullName>
        <label>Freight Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requestor_Parent_Agency__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Requestor Parent Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCAC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SCAC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Via_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ship Via Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Charge__c</fullName>
        <description>To Store Shipment Charge</description>
        <label>Shipment Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipment_Date__c</fullName>
        <description>To Store Shipment Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipment_Dimensions__c</fullName>
        <label>Shipment Dimensions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipment_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To Store Shipment Order Number</description>
        <label>Shipment Order</label>
        <referenceTo>Shipment_Order__c</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipment_Tracking_Number__c</fullName>
        <description>To Store Shipment Tracking Number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipment Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Tracking__c</fullName>
        <formula>HYPERLINK(&quot;https://www.ups.com/track?loc=en_US&amp;tracknum=&quot;+Shipment_Tracking_Number__c+&quot;&amp;requester=WT/trackdetails&quot;,Shipment_Tracking_Number__c,&quot;_blank&quot;)</formula>
        <label>Shipment Tracking</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Shipment_Quantity__c</fullName>
        <description>To Shipment Quantity</description>
        <label>Total Shipment Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Shipment_Weight__c</fullName>
        <description>To Store Shipment Weight</description>
        <label>Total Shipment Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight_Unit_Of_Measure__c</fullName>
        <description>To Store Weight Unit Of Measure</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Weight Unit Of Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Shipment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Shipment_Order__c</columns>
        <columns>Shipment_Charge__c</columns>
        <columns>Shipment_Tracking__c</columns>
        <columns>Total_Shipment_Quantity__c</columns>
        <columns>Shipment_Date__c</columns>
        <columns>Freight_Charge__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipments</pluralLabel>
    <recordTypes>
        <fullName>PHOS</fullName>
        <active>true</active>
        <description>PHOS record type for Shipment</description>
        <label>PHOS</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>